# getting-started

./: Makefile  README.md  image.json  operator.json  testbench.cpp  uppercase.cpp
.devcontainer/: devcontainer.json  docker-compose.yml
app/: CMakeLists.txt  app.cpp
colorfilter/: Makefile  colorfilter.cpp  colorfilter.h  operator.json  testbench.cpp
